# internal/model/service_info.go
@@ -1,0 +1,17 @@
+package model
+
+import "time"
+
+type ServiceInfo struct {
+	ID          int64     `json:"id" gorm:"primary_key"`
+	LoadType    int       `json:"load_type" gorm:"column:load_type" description:"负载类型 0=http 1=tcp 2=grpc"`
+	ServiceName string    `json:"service_name" gorm:"column:service_name" description:"服务名称"`
+	ServiceDesc string    `json:"service_desc" gorm:"column:service_desc" description:"服务描述"`
+	UpdatedAt   time.Time `json:"updated_at" gorm:"column:updated_at" description:"更新时间"`
+	CreatedAt   time.Time `json:"created_at" gorm:"column:created_at" description:"创建时间"`
+	IsDelete    int8      `json:"is_delete" gorm:"column:is_delete" description:"是否删除 0=未删除 1=已删除"`
+}
+
+func (ServiceInfo) TableName() string {
+	return "gateway_service_info"
+}
