# internal/router/service_router.go
@@ -1,0 +1,22 @@
+package router
+
+import (
+	"gateway/internal/controller"
+	"gateway/pkg/middleware"
+
+	"github.com/gin-gonic/gin"
+)
+
+func ServiceRegister(router *gin.Engine) {
+	serviceRouter := router.Group("/service")
+	{
+		serviceRouter.Use(
+			middleware.SessionAuthMiddleware(),
+		)
+
+		Controller := &controller.ServiceController{}
+
+		serviceRouter.GET("/service_list", Controller.ServiceList)
+
+	}
+}
